dtrace/jsdt tests crash on solaris. found an unadvertised bad scavengable oop in the code cache

XMLWordPrintable

    • b14
    • solaris
    • Verified

        test dtrace/jsdt/creation/CheckAllTypesTest crashes

        Almost all dtrace/jsdt tests crashes like this on Solaris.

        log:
        # Internal Error (/opt/jprt/T/P1/184029.amurillo/s/src/share/vm/code/nmethod.cpp:2478), pid=15261, tid=2
        # fatal error: found an unadvertised bad scavengable oop in the code cache

        hs_err file is attached. Summary of hs_err:
        V [libjvm.so+0x1070b72] void report_fatal(const char*,int,const char*)+0x55a;; __1cMreport_fatal6Fpkci1_v_+0x55a
        V [libjvm.so+0x22aaaba] void nmethod::verify_scavenge_root_oops()+0x9f2;; __1cHnmethodZverify_scavenge_root_oops6M_v_+0x9f2
        V [libjvm.so+0x228e57f] nmethod::nmethod #Nvariant 1(Method*,int,CodeOffsets*,CodeBuffer*,int)+0x383;; __1cHnmethod2t6MpnGMethod_ipnLCodeOffsets_pnKCodeBuffer_i_v_+0x383
        V [libjvm.so+0x228c63c] nmethod*nmethod::new_dtrace_nmethod(methodHandle,CodeBuffer*,int,int,int,int)+0x3d8;; __1cHnmethodSnew_dtrace_nmethod6FnMmethodHandle_pnKCodeBuffer_iiii_p0_+0x3d8
        V [libjvm.so+0x2690280] nmethod*SharedRuntime::generate_dtrace_nmethod(MacroAssembler*,methodHandle)+0x5a1c;; __1cNSharedRuntimeXgenerate_dtrace_nmethod6FpnOMacroAssembler_nMmethodHandle__pnHnmethod__+0x5a1c

              Assignee:
              Albert Noll (Inactive)
              Reporter:
              Mattias Tobiasson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: