8040085: dtrace/jsdt tests crash on solaris. found an unadvertised bad scavengable oop in the code cache

Add CodeCache::add_scavenge_root_nmethod(this) to the dtrace-constructor of nmethod

Reviewed-by: roland, iveresov